--- a/styless.css
+++ b/styless.css
@@ -121,17 +121,30 @@
     color: var(--primary-color);
 }
 
+.main__container {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; 
+    justify-content: flex-start; /* Align items to the top */
+    height: 90vh;
+    max-width: 1300px;
+    padding: 0 50px;
+    margin: auto;
+}
+
 .main__btn {
+    margin-top: auto; /* Pushes the button to the bottom */
     font-size: 1rem;
     background: var(--gradient-button);
     padding: 14px 32px;
     border-radius: 4px;
     color: var(--primary-color);
-    margin-top: 4rem;
     cursor: pointer;
     position: relative;
     transition: all 0.35s;
     outline: none;
+}
+
 }
 
 .main__btn:hover::after {
