--- a/styless.css
+++ b/styless.css
@@ -124,6 +124,27 @@
     color: var(--primary-color);
 }
 
+.main__content ul {
+    margin-top: 2rem;
+    padding: 0;
+    list-style-type: none; /* Remove default bullets */
+}
+
+.main__content li {
+    margin-top: 1rem;
+    font-size: 1.5rem; /* Adjusted font size for readability */
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.main__content li::before {
+    content: "• "; /* Custom bullet points */
+    color: var(--gradient-red); /* Custom bullet colour */
+    font-size: 2rem;
+    margin-right: 10px; /* Space between bullet and text */
+}
+
+
 .main__btn {
     margin-top: 4rem; 
     font-size: 1rem;
