--- a/styless.css
+++ b/styless.css
@@ -204,6 +204,12 @@
     color: #e9e9e9;
 }
 
+.footer__text {
+    color: #ffffff;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 2rem;
+
 @media screen and (max-width: 768px) {
     .main__container {
         grid-template-columns: auto;
